@@ -1,3 +1,5 @@
+* Add palette to Wireless device on Home view showing channel (dcbw)
+
 Snapshot 23ad88db0c
 
 * Re-share an activity when it gets launched from the journal if it was
